<resources>
    <string name="app_name">BalanceUp</string>
    <string name="app_description">Manage your finances with ease</string>
    <string name="sign_in_with_google">Connect to Google</string>
    <string name="default_web_client_id">695677804219-7vc3634kar0pdethu0qbg38cste57add.apps.googleusercontent.com</string>
    <string name="skip">SKIP</string>
    <string name="account">Account</string>
    <string name="total_spends">Total Spends</string>
    <string name="you_get">You Get</string>
    <string name="default_balance">₹ 0.00</string>
    <string name="settle_up_msg">You are settled up !</string>

    <string name="group_name">Group Name</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="paid_by">Paid By</string>
    <string name="total_expense">Total Expense</string>
    <string name="balance_up">BALANCE UP</string>
    <string name="add_expense">Add Expense</string>
    <string name="enter_group_name">Enter Group Name</string>
</resources>